--- a/Styles/index.css
+++ b/Styles/index.css
@@ -3,46 +3,41 @@
     margin: 0;
     box-sizing: border-box;
 }
-
-.head{
+header{
     width: 100%;
     height: 7rem;
-    background-color: #10066f;
-    display: flex;
-    justify-content: flex-start;
-
+    background-color: #090c5d;
+    display: flex;   
 }
-.head >.subhead{
-    margin: auto;
-    width: 70%;
-    height: 6.5rem;
-    background-color: greenyellow;
-    display: flex;
-   
+h1{
+    color:khaki;
+    margin-bottom: 1rem;
+    margin-left: 2.5rem;
     
 }
-  h1{
-    color: #e6e8ff;
-    margin-left: 19rem;
-}
-li{
-    color: #e6e8ff;
-}
-.head >.buton{
-    width: 20%;
-    height: 1.5rem;
-    background-color: bisque;
-    display: flex;
-    justify-content: space-between;
-    margin-top: 4rem;
-    
-}
-.head > .icon{
-    width: 10%;
+header > .subhead{
+    width: 80%;
     height: 5rem;
     margin-top: 1rem;
-    justify-content: end;
-   
+    margin-left: 2rem;
+    align-content: center;
 }
-
-/* body*/
+header > .icon{
+    width: 8%;
+    height: 5rem;
+    align-items: flex-end;
+    margin-top: 1rem;
+    
+}
+.btn{
+    padding: 5px 10px;
+    background-color: #2d47ff;
+    color:#10066f;
+    border: none;
+    border-radius: 7px;
+    cursor: pointer;
+    background: linear-gradient(180deg,#2d47ff 0%, #d4e5ff 100%);
+}
+.img1{
+    
+}
