--- a/Styles/index.css
+++ b/Styles/index.css
@@ -38,6 +38,26 @@ header > .icon{
     cursor: pointer;
     background: linear-gradient(180deg,#2d47ff 0%, #d4e5ff 100%);
 }
-.img1{
-    
+.body{
+    width: 100%;
+    height: 90rem;
+    background-color: #2d47ff; 
+}
+.body > .firstBody{
+    align-items: center;
+    width: 70%;
+    height: 5rem;
+    display: flex;
+    justify-content: space-between;
+    padding-top: 1rem;
+    margin-left: 11rem;
+}
+.btnBody{
+    padding: 5px 10px;
+    background-color: #2d47ff;
+    color:#10066f;
+    border: none;
+    border-radius: 7px;
+    cursor: pointer;
+    background: linear-gradient(180deg,#2d47ff 0%, #d4e5ff 100%);
 }
