--- a/Styles/index.css
+++ b/Styles/index.css
@@ -61,3 +61,40 @@ header > .icon{
     cursor: pointer;
     background: linear-gradient(180deg,#2d47ff 0%, #d4e5ff 100%);
 }
+
+img{
+    width: 15rem;
+    height: 12rem;
+}
+.img1{
+    background-image: url(../Assents/img/bogota.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.img2{
+    background-image: url(../Assents/img/barranquilla.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.img3{
+    background-image: url(../Assents/img/antioquia.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.img4{
+    background-image: url(../Assents/img/cartagena.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.img5{
+    background-image: url(../Assents/img/amazonas.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.firstContainer{
+    width: 100%;
+    height: 15rem;
+    background-color: antiquewhite;
+    display: flex;
+}
+
